src/main/java/syntactic/test/failing/emptyImp.ru
struct A{
}

impl A{}
start{}